15.10 (ws)
      - preparations for better tuplet handling
      - changed order of note duration icons in toolbar to match shortcuts
      - changed shortcuts for note duration and intervals
14.10 (ws)
      - Extended note entry with mouse: more time positions are now allowed for
        note positioning. Some regressions are expected, especially with tuplets.
      (sy)
      - fix bug: acciaccaturas play the main note simultaneously with the grace notes
      - made appogiaturas longer than main note play back as acciaccaturas
      - midi realization of arpeggios (no down arpeggio yet)
13.10 (ws)
      - added a flag to MStaff to indicate a measure/staff has more than one voice. In this
        "multi voice context" stem direction is taken from the "stem direction" table
        instead calculated from vertical note position.
      - moved "stem direction settings for multi voice context" from preferences to style
      - change output order of musicXml elements: output "tie type" just after "duration"
      (sy)
      - fix wrong instrument sounds when inserting/clicking notes after adding
        instruments with instruments dialog
12.10 (ws)
      - updated russian translation from Alexandre Prokoudine
      (sy)
      - fix playback of excerpt after creation
      - do not deselect when dragging canvas
      - do not middle mouse drag/drop selected elements when drag is started on
        an empty part of the canvas
      - make middle-mouse drag canvas work in note entry mode
      - fix wrong-instrument bugs: last instrument played in another tab would
        sound when note is inserted or clicked, and when playing a piano part
11.10 (ws)
      - align dots in dotted chords vertical
      (sy)
      - fix regression in editing hbox and vbox: would not show initially at the correct spot.
      - restore previous state after playback, if it was note entry mode, this is
        indicated and the cursor is shown in the correct place